test/corpus/assignment.txt
==================
This Assignment
==================

class Foo(){
  var foo = null
  constructor(bar:Int) {
    foo = bar
  }
}

---

(source_file
  (class_declaration
    (type_identifier)
    (primary_constructor)
    (class_body
      (property_declaration
        (variable_declaration
          (simple_identifier)))
      (secondary_constructor
        (parameter
          (simple_identifier)
          (user_type
            (type_identifier)))
        (statements
          (assignment
            (simple_identifier)
            (simple_identifier)))))))
